# rlim

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
src/rlim/: __init__.py  _ratelimit.py  bundle.py  errors.py  exceptions.py  models.py  ratelimiter.py  utils.py
tests/: ratelimit_tester.py  test.py
