[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# [project] spec: https://peps.python.org/pep-0621/#details
name = "rlim"
description = "A modern Python rate limiting package"
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
	"ratelimiter",
	"ratelimit",
	"rate limiting",
	"rate limiter",
	"api",
	"decorator",
	"context manager",
]
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
requires-python = ">=3.8"
# classifiers spec: https://pypi.org/classifiers/
classifiers = [
	# development status
	"Development Status :: 5 - Production/Stable",
	
	# intended audience(s)
	"Intended Audience :: Developers",
	
	# license
    "License :: OSI Approved :: Apache Software License",

	# operating system
    "Operating System :: OS Independent",
	
	# language(s)
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",

	# topic(s)
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities",
	"Typing :: Typed",
]

[project.urls]
repository = "https://github.com/tanrbobanr/rlim"
documentation = "https://github.com/tanrbobanr/rlim/blob/main/README.md"
changelog = "https://github.com/tanrbobanr/rlim/blob/main/changelog.md"
